# BaseBallBot

./: .env.example  .gitignore  dashboard.py  pyproject.toml  requirements.txt
data/db/: bbbot.db
data/models/run_total/latest/: metadata.json  model.pkl
data/models/win_probability/latest/: feature_importance.csv  metadata.json  model.pkl
src/bbbot/: __init__.py  config.py  constants.py  exceptions.py
src/bbbot/backtest/: engine.py
src/bbbot/betting/: kelly.py  odds_math.py
src/bbbot/cli/: app.py
src/bbbot/cli/commands/: backtest.py  ingest.py  predict.py  report.py  train.py
src/bbbot/db/: engine.py  models.py  queries.py  seed.py
src/bbbot/features/: base.py  builder.py  bullpen.py  registry.py  situational.py  starting_pitching.py  team_batting.py
src/bbbot/ingest/: base_client.py  boxscore.py  mlb_stats.py  odds.py  odds_ingest.py  schedule.py  statcast.py
src/bbbot/models/: base.py  baseline.py  run_total.py  training.py  win_probability.py
src/bbbot/reports/: daily_card.py  exporters.py  performance.py
