[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bbbot"
version = "0.1.0"
description = "MLB Game Outcome & Run Total Prediction Engine"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "structlog>=24.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "httpx>=0.27",
    "tenacity>=8.0",
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.12",
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
ml = [
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "shap>=0.45",
    "optuna>=3.5",
    "joblib>=1.3",
    "pybaseball>=2.3",
]
dashboard = [
    "streamlit>=1.35",
    "plotly>=5.20",
    "matplotlib>=3.8",
]
alerts = [
    "python-telegram-bot>=21.0",
    "discord-webhook>=1.3",
]
postgres = [
    "psycopg2-binary>=2.9",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
bbbot = "bbbot.cli.app:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
